apps/40-network/adguard-home/overlays/test/http-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: adguard-home-redirect-scheme
  namespace: networking
spec:
  redirectScheme:
    scheme: https
    permanent: true
