apps/40-network/adguard-home/overlays/test/kustomization.yaml
---
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
resources:
  - ../../base
  - http-redirect.yaml
  - ingress.yaml
